# camfort

./: .fixman_conf.yaml  .fixman_ledger.yaml  .gitignore  .travis.yml  ASTVersions.hs  Annotations.lhs  CHANGELOG.md  CallGraph.lhs  CommonBlocks.lhs  DeadCode.lhs  Equivalences.lhs  Functionality.hs  Helpers.hs  Helpers.lhs  Input.hs  IntermediateReps.lhs  LICENSE  LICENSE.txt  LVA.lhs  Loops.lhs  Main.hs  Main.lhs  Output.hs  Output.lhs  README  README.md  Setup.hs  Syntax.lhs  TODO  Traverse.hs  Traverse.lhs  TypeStructuring.lhs  Types.lhs  camfort.cabal  cpp.sh  example-gaussian-matrix  flake.nix  foo.f90  haskell-flake-ghc92.nix  haskell-flake-ghc94.nix  (+13 more)
.github/workflows/: ci-windows.yml  ci.yml  general.yaml  hackage.yml  linux.yml  nix-build-image.yaml  nix-build.yaml  nix.yaml  nix.yml  windows.yml
.github/workflows/disabled/: hackage.yml
Analysis/: Annotations.hs  Annotations.lhs  CallGraph.hs  CallGraph.lhs  IntermediateReps.hs  IntermediateReps.lhs  LVA.hs  LVA.lhs  Loops.hs  Loops.lhs  StencilInferenceEngine.hs  StencilTests.hs  Stencils.hs  StencilsForpar.hs  Syntax.hs  Syntax.lhs  Types.hs  Types.lhs  Units.lhs
Extensions/: UnitSyntaxConversion.hs  Units.hs  UnitsEnvironment.hs  UnitsForpar.hs  UnitsParser.y  UnitsSolve.hs  UnitsSolveHMatrix.hs
Helpers/: Vec.hs
Language/: Fortran.hs
Language-old/: Fortran.bak  Fortran.hi  Fortran.hs  Fortran.hs~
Language-old/Fortran/: Foo.f90  Lexer.hi  Lexer.hs  Lexer.hs~  Lexer.x  Parser.hi  Parser.hs  Parser.hs~  Parser.y~  Parser2.y  Pretty.hi  Pretty.hs  Pretty.hs~  Show.hi  Show.hs  Show.hs~  a.out  parseinfo
Language/Fortran/: Lexer.x  Parser.y  Pretty.hs
Tests/: Stencils.hs
Transformation/: CommonBlockElim.hs  CommonBlockElim.lhs  CommonBlockElimToCalls.hs  DeadCode.hs  DeadCode.lhs  DerivedTypeIntro.hs  DerivedTypeIntro.lhs  EquivalenceElim.hs  EquivalenceElim.lhs  Syntax.hs  Syntax.lhs  Tutorial.lhs  Units.lhs
dev/: lapack-test.hs
doc/: maintainers.md  sbv-impl-notes.txt  units.html  units.txt
docker/: Dockerfile  Dockerfile.git  camfort-docker.sh
eval/: Analyse.hs  countLoC.sh  files.sh  infer.sh  inferRaw.sh  is_valid_dir.sh  last.sh
foos/: foo2.f90  foo2.f90~
jacobi/: GenJacobi.hs  diffs.sh  jacobi.f90  ppm.f90  run.sh
mem/: foo.html  foo.html~  sample.f90  sample.f90.html  sample.f90~
samples/: source.js
samples/arrays/: dodgy-colons.f90
samples/book/five/: code51.f90  code52.f90  code53.f90  code5a.f90
samples/book/four/: code42.f90  code43.f90~  code44.f90
samples/book/nine/: code91.f90  code92.f90
samples/book/one/: code11.f90  code121.f90  code122.f90  code124.f90
samples/book/seven/: code72.f90
samples/book/six/: code61.f90  code61.f90~  code63.f90  code64.f90
samples/book/three/: code31.f90  code32.f90  code33.f90~  code34.f90  code3a.f90  code3b.f90  code3c.f90
samples/book/twelve/: code123.f90  code124.f90  code125.f90  code125.f90.save  code126.f90
samples/book/two/: code21.f90  code210.f90  code211.f90  code211.f90~  code212.f90  code212.f90~  code213.f90  code213.f90~  code214.f90  code214.f90~  code22.f90  code23.f90  code24.f90  code25.f90  code26.f90  code27.f90  code28.f90  code29.f90~  code2a.f90  code2b.f90
samples/booku/eight/: code81.f90
samples/booku/five/: code51.f90  code52.f90  code53.f90  code54.f90  code55.f90
samples/booku/four/: code41.f90  code42.f90  code44.f90  code45.f90  code46.f90
samples/booku/one/: code11.f90
samples/booku/seven/: code71.f90  code72.f90
samples/booku/six/: code61.f90  code62.f90  (+2 more)
samples/common/: foo2.f90
samples/ddt/: example1a.f90  example1b.f90  example3.f90  example4.f90
samples/equivalence/: Makefile  example1.f90  example2.expected.f90  example2.f90  wrt.f90
samples/foos/: foo.f90  foo2.f90
samples/foos2/: foo.f90
samples/fp-check/: intconv.f90
samples/iccs/: iccs.f90  iccs2.f90
samples/implicit-none/: example1.f90  example2.f90
samples/invariants/: angle.f90  arrays.f90  invariants.f90
samples/mem/: sample.f90
samples/stencils/: CrankNicolson.f90  a.out  access.f90  approx.expected.f90  approx.f90  centered.f  centered.f90  combined-region.f90  conflict.f90  dataRefExample.expected.f90  dataRefExample.f90  dataRefExample2.f90  decomposed-three-point.f90  intrinsic.f90  laplace.f90  main  module.f90  navier.expected  nested.f90  non-neighbour.expected.f90  non-neighbour.f90  one-check.f90  one.expected.f90  one.f  one.f90  one.f90.html  out  parabolic2  parabolic2.expected.f90  parabolic2.f90  parabolic2.f90.html  proc  procs.expected.f  procs.f  programContains.f90  range.f90  rec.expected.f90  rec.f90  reduction.expected.f90  reduction.f90  (+15 more)
samples/tutorial/: test.f90
samples/units/: badPoly2.f90  bug32.f90  bug32b.f90  eapVarApp.f90  eapVarScope.f90  fahrenheit.f90  func-annot.f90  higherorder_error.f90  iccs.f90  id.f90  id.f90.syntax  insideOutside.f90  multi.f90  paper.f90  poly-bug.f90  poly-scale.f90  poly1.f90  poly2.f90  polymorphic-zero.f90  polymorphism.f90  simple.f90  simple2.f90  squarePoly.f90  stuck1.f
samples/worksheet/: example1.f90  example1a.f90  example2.f90  example3.f90
src/: ASTVersions.hs  Helpers.hs  Main.hs  Traverse.hs
src/Analysis/: LVA.hs  StencilSpecs.hs  StencilsForpar.hs  StencilsForparOldInference.hs  Syntax.hs
src/Camfort/: Analysis.hs  Functionality.hs  Helpers.hs  Input.hs  ModFile.hs  Output.hs  OutputNew.hs  PrettyPrint.hs  Reprint.hs  Traverse.hs
src/Extensions/: UnitParser.y  UnitSyntaxConversion.hs  UnitsForpar.hs  UnitsSolveHMatrix.hs
src/Transformation/: DerivedTypeIntro.hs  Tutorial.lhs
syz-0.2.0.0/: LICENSE  README  syz.cabal
talk/: example1  example1.f90  example1.f90~  external.f90~  external.mod  helpers.f90~  helpers.mod  intersect.f90~
tests/: Helpers.hs  TestSuite.hs
tests/AnalysisTests/: Stencils.hs
tests/Camfort/: FunctionalitySpec.hs  ReprintSpec.hs  TestUtils.hs
tests/TransformationTests/: Common.hs
tests/fixtures/: implicitnone1.f90  implicitnone2.f90  implicitnone3.f90  simple.expected.f90  simple.f90
tmp/2021-08-09-do-trans/: shared-trans.f90  shared.f90  simple-trans.f90  simple.f90
(+431 files in other folders)
