name:                   camfort
version:                0.900
synopsis:               CamFort - Cambridge Fortran infrastructure
description:            CamFort is a tool for the analysis, transformation, verification of Fortran code.

copyright:              2012-2016 University of Cambridge
author:                 Dominic Orchard, Matthew Danish, Mistral Contrastin, Andrew Rice, Oleg Oshmyan
maintainer:             dom.orchard@gmail.com

license:                Apache-2.0
license-file:           LICENSE

stability:              experimental
build-type:             Simple
category:               Language

cabal-version:          >= 1.18
tested-with:            GHC >= 7.8

extra-source-files:     tests/Camfort/Specification/Stencils/*.f
                        tests/Camfort/Specification/Units/*.f90
                        tests/Camfort/Transformation/samples/*.f90

source-repository head
  type: git
  location: https://github.com/camfort/camfort

executable camfort
  main-is: Main.hs
  hs-source-dirs:       src
  other-modules:        Camfort.Analysis.Annotations
                        Camfort.Analysis.CommentAnnotator
                        Camfort.Analysis.Simple
                        Camfort.Specification.Stencils.Annotation
                        Camfort.Specification.Stencils.CheckBackend
                        Camfort.Specification.Stencils.CheckFrontend
                        Camfort.Specification.Stencils.InferenceBackend
                        Camfort.Specification.Stencils.InferenceFrontend
                        Camfort.Specification.Stencils.Model
                        Camfort.Specification.Stencils.Syntax
                        Camfort.Specification.Stencils.Grammar
                        Camfort.Specification.Stencils.Synthesis
                        Camfort.Specification.Stencils
                        Camfort.Specification.Units
                        Camfort.Specification.Units.InferenceFrontend
                        Camfort.Specification.Units.InferenceBackend
                        Camfort.Specification.Units.Environment
                        Camfort.Specification.Units.Monad
                        Camfort.Specification.Units.Parser
                        Camfort.Specification.Units.Synthesis
                        Camfort.Transformation.CommonBlockElim
                        Camfort.Transformation.DeadCode
                        Camfort.Transformation.EquivalenceElim
                        Camfort.Helpers
                        Camfort.Helpers.Syntax
                        Camfort.Helpers.Vec
                        Camfort.Functionality
                        Camfort.Input
                        Camfort.Output
                        Camfort.Reprint
                        Main

  build-depends:        base >= 4.6 && < 5,
                        ghc-prim >= 0.3.1.0,
                        containers >= 0.5.0.0,
                        uniplate >= 1.6.10,
                        syz >= 0.2,
                        syb >= 0.4,
                        matrix >=0.2.2,
                        vector >= 0.1,
                        hmatrix >= 0.15,
                        mtl >= 2.1,
                        text >= 0.11.2.3,
                        array >= 0.4,
                        directory >= 1.2,
                        transformers >= 0.4,
                        GenericPretty >= 1.2,
                        QuickCheck >= 2.8,
                        fortran-src >= 0.1.0.3,
                        filepath,
                        fgl >= 5.5,
                        bytestring >= 0.10
  default-language: Haskell2010

library
  hs-source-dirs:       src
  build-tools:          alex, happy
  exposed-modules:      Camfort.Analysis.Annotations
                        Camfort.Analysis.CommentAnnotator
                        Camfort.Analysis.Simple
                        Camfort.Specification.Stencils.Annotation
                        Camfort.Specification.Stencils.CheckBackend
                        Camfort.Specification.Stencils.CheckFrontend
                        Camfort.Specification.Stencils.InferenceBackend
                        Camfort.Specification.Stencils.InferenceFrontend
                        Camfort.Specification.Stencils.Model
                        Camfort.Specification.Stencils.Syntax
                        Camfort.Specification.Stencils.Grammar
                        Camfort.Specification.Stencils.Synthesis
                        Camfort.Specification.Stencils
                        Camfort.Specification.Units
                        Camfort.Specification.Units.InferenceFrontend
                        Camfort.Specification.Units.InferenceBackend
                        Camfort.Specification.Units.Environment
                        Camfort.Specification.Units.Monad
                        Camfort.Specification.Units.Parser
                        Camfort.Specification.Units.Synthesis
                        Camfort.Transformation.CommonBlockElim
                        Camfort.Transformation.DeadCode
                        Camfort.Transformation.EquivalenceElim
                        Camfort.Helpers
                        Camfort.Helpers.Syntax
                        Camfort.Helpers.Vec
                        Camfort.Functionality
                        Camfort.Input
                        Camfort.Output
                        Camfort.Reprint

  build-depends:        base >= 4.6 && < 5,
                        ghc-prim >= 0.3.1.0,
                        containers >= 0.5.0.0,
                        uniplate >= 1.6.10,
                        syz >= 0.2,
                        syb >= 0.4,
                        matrix >=0.2.2,
                        hmatrix >= 0.17.0.1,
                        mtl >= 2.1,
                        text >= 0.11.2.3,
                        array >= 0.4,
                        directory >= 1.2,
                        transformers >= 0.4,
                        vector >= 0.1,
                        GenericPretty >= 1.2,
                        fortran-src >= 0.1.0.3,
                        filepath,
                        bytestring >= 0.10,
                        fgl >= 5.5
  default-language: Haskell2010

test-suite spec
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       tests
  other-modules:        Camfort.Analysis.CommentAnnotatorSpec
                        Camfort.Helpers.VecSpec
                        Camfort.Specification.Stencils.CheckSpec
                        Camfort.Specification.Stencils.GrammarSpec
                        Camfort.Specification.Stencils.ModelSpec
                        Camfort.Specification.StencilsSpec
                        Camfort.Specification.UnitsSpec
                        Camfort.Transformation.CommonSpec
                        Camfort.Transformation.EquivalenceElimSpec
  build-depends:        base >= 4.6 && < 5,
                        containers >= 0.5,
                        filepath >= 1.4,
                        directory >= 1.2,
                        hspec >= 2.2,
                        QuickCheck >= 2.8,
                        fortran-src >= 0.1.0.3,
                        uniplate >= 1.6.10,
                        mtl >= 2.1,
                        bytestring >= 0.10,
                        array >= 0.4,
                        hmatrix >= 0.15,
                        camfort
  default-language: Haskell2010
