name:                   camfort
version:                0.903
synopsis:               CamFort - Cambridge Fortran infrastructure
description:            CamFort is a tool for the analysis, transformation, verification of Fortran code.
homepage:               https://camfort.github.io
bug-reports:            https://github.com/camfort/camfort/issues

copyright:              2012-2016 University of Cambridge
author:                 Dominic Orchard, Matthew Danish, Mistral Contrastin, Andrew Rice, Oleg Oshmyan
maintainer:             dom.orchard@gmail.com

license:                Apache-2.0
license-file:           LICENSE

stability:              experimental
build-type:             Simple
category:               Language

cabal-version:          >= 1.18
tested-with:            GHC >= 7.8

extra-source-files:     tests/fixtures/Specification/Stencils/*.f
                        tests/fixtures/Specification/Units/*.f90
			tests/fixtures/Transformation/*.f90

source-repository head
  type: git
  location: https://github.com/camfort/camfort

executable camfort
  main-is: Main.hs
  hs-source-dirs:       src
  other-modules:        Camfort.Analysis.Annotations
                        Camfort.Analysis.CommentAnnotator
                        Camfort.Analysis.Simple
                        Camfort.Specification.Parser
                        Camfort.Specification.Stencils.Annotation
                        Camfort.Specification.Stencils.CheckBackend
                        Camfort.Specification.Stencils.CheckFrontend
                        Camfort.Specification.Stencils.Consistency
                        Camfort.Specification.Stencils.DenotationalSemantics
                        Camfort.Specification.Stencils.Generate
                        Camfort.Specification.Stencils.InferenceBackend
                        Camfort.Specification.Stencils.InferenceFrontend
                        Camfort.Specification.Stencils.Model
                        Camfort.Specification.Stencils.Syntax
                        Camfort.Specification.Stencils.Parser
                        Camfort.Specification.Stencils.Parser.Types
                        Camfort.Specification.Stencils.Synthesis
                        Camfort.Specification.Stencils
                        Camfort.Specification.Units
                        Camfort.Specification.Units.InferenceFrontend
                        Camfort.Specification.Units.InferenceBackend
                        Camfort.Specification.Units.Environment
                        Camfort.Specification.Units.Monad
                        Camfort.Specification.Units.Parser
                        Camfort.Specification.Units.Parser.Types
                        Camfort.Specification.Units.Synthesis
                        Camfort.Transformation.CommonBlockElim
                        Camfort.Transformation.DeadCode
                        Camfort.Transformation.EquivalenceElim
                        Camfort.Helpers
                        Camfort.Helpers.Syntax
                        Camfort.Helpers.Vec
                        Camfort.Functionality
                        Camfort.Input
                        Camfort.Output
                        Camfort.Reprint
                        Main

  build-depends:        base >= 4.6 && < 5,
                        ghc-prim >= 0.3.1.0 && < 0.6,
                        containers >= 0.5.0.0 && < 0.6,
                        uniplate >= 1.6.10 && < 2,
                        syz >= 0.2 && < 0.3,
                        syb >= 0.4 && < 0.7,
                        matrix >= 0.2.2 && < 0.4,
                        vector >= 0.1 && < 0.12,
                        hmatrix >= 0.15 && < 0.19,
                        mtl >= 2.1 && < 3,
                        text >= 0.11.2.3 && < 2,
                        array >= 0.4 && < 0.6,
                        directory >= 1.2 && < 2,
                        transformers >= 0.4 && < 0.6,
                        GenericPretty >= 1.2 && < 2,
                        QuickCheck >= 2.8 && < 3,
                        fortran-src >= 0.2.0.0 && < 0.3,
                        filepath >= 1.4 && < 2,
                        fgl >= 5.5 && < 6,
                        bytestring >= 0.10 && < 0.11,
                        binary >= 0.8.3.0 && < 0.9,
                        lattices >= 1.5 && < 2,
                        sbv >= 7.0 && < 8,
                        partial-order >= 0.1.2,
                        optparse-applicative >= 0.13.2.0 && < 0.14
  default-language: Haskell2010

library
  hs-source-dirs:       src
  build-tools:          alex, happy
  exposed-modules:      Camfort.Analysis.Annotations
                        Camfort.Analysis.CommentAnnotator
                        Camfort.Analysis.Simple
                        Camfort.Specification.Parser
                        Camfort.Specification.Stencils.Annotation
                        Camfort.Specification.Stencils.CheckBackend
                        Camfort.Specification.Stencils.CheckFrontend
                        Camfort.Specification.Stencils.Consistency
                        Camfort.Specification.Stencils.DenotationalSemantics
                        Camfort.Specification.Stencils.InferenceBackend
                        Camfort.Specification.Stencils.InferenceFrontend
                        Camfort.Specification.Stencils.Model
                        Camfort.Specification.Stencils.Syntax
                        Camfort.Specification.Stencils.Generate
                        Camfort.Specification.Stencils.Parser
                        Camfort.Specification.Stencils.Parser.Types
                        Camfort.Specification.Stencils.Synthesis
                        Camfort.Specification.Stencils
                        Camfort.Specification.Units
                        Camfort.Specification.Units.InferenceFrontend
                        Camfort.Specification.Units.InferenceBackend
                        Camfort.Specification.Units.Environment
                        Camfort.Specification.Units.Monad
                        Camfort.Specification.Units.Parser
                        Camfort.Specification.Units.Parser.Types
                        Camfort.Specification.Units.Synthesis
                        Camfort.Transformation.CommonBlockElim
                        Camfort.Transformation.DeadCode
                        Camfort.Transformation.EquivalenceElim
                        Camfort.Helpers
                        Camfort.Helpers.Syntax
                        Camfort.Helpers.Vec
                        Camfort.Functionality
                        Camfort.Input
                        Camfort.Output
                        Camfort.Reprint

  build-depends:        base >= 4.6 && < 5,
                        ghc-prim >= 0.3.1.0 && < 0.6,
                        containers >= 0.5.0.0 && < 0.6,
                        uniplate >= 1.6.10 && < 2,
                        syz >= 0.2 && < 0.3,
                        syb >= 0.4 && < 0.7,
                        matrix >= 0.2.2 && < 0.4,
                        hmatrix >= 0.15 && < 0.19,
                        mtl >= 2.1 && < 3,
                        text >= 0.11.2.3 && < 2,
                        array >= 0.4 && < 0.6,
                        directory >= 1.2 && < 2,
                        transformers >= 0.4 && < 0.6,
                        vector >= 0.1 && < 0.12,
                        GenericPretty >= 1.2 && < 2,
                        fortran-src >= 0.2.0.0 && < 0.3,
                        filepath >= 1.4 && < 2,
                        bytestring >= 0.10 && < 0.11,
                        fgl >= 5.5 && < 6,
                        binary >= 0.8.3.0 && < 0.9,
                        lattices >= 1.5 && < 2,
                        sbv >= 7.0 && < 8,
                        partial-order >= 0.1.2 && < 0.2
  default-language: Haskell2010

test-suite spec
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       tests
  other-modules:        Camfort.Analysis.CommentAnnotatorSpec
                        Camfort.Specification.ParserSpec
                        Camfort.Specification.Stencils.CheckSpec
                        Camfort.Specification.Stencils.ConsistencySpec
                        Camfort.Specification.Stencils.DenotationalSemanticsSpec
                        Camfort.Specification.Stencils.ParserSpec
                        Camfort.Specification.Stencils.InferenceBackendSpec
                        Camfort.Specification.Stencils.ModelSpec
                        Camfort.Specification.StencilsSpec
                        Camfort.Specification.Units.InferenceBackendSpec
                        Camfort.Specification.Units.InferenceFrontendSpec
                        Camfort.Specification.Units.ParserSpec
                        Camfort.Specification.UnitsSpec
                        Camfort.Transformation.CommonSpec
                        Camfort.Transformation.EquivalenceElimSpec
  build-depends:        base >= 4.6 && < 5,
                        containers >= 0.5.0.0 && < 0.6,
                        filepath >= 1.4 && < 2,
                        directory >= 1.2 && < 2,
                        hspec >= 2.2 && < 3,
                        QuickCheck >= 2.8 && < 3,
                        fortran-src >= 0.2.0.0 && < 0.3,
                        uniplate >= 1.6.10 && < 2,
                        mtl >= 2.1 && < 3,
                        bytestring >= 0.10 && < 0.11,
                        array >= 0.4 && < 0.6,
                        hmatrix >= 0.15 && < 0.19,
                        text >= 0.11.2.3 && < 2,
                        binary >= 0.8.3.0 && < 0.9,
                        lattices >= 1.5 && < 2,
                        sbv >= 7.0 && < 8,
                        partial-order >= 0.1.2 && < 0.2,
                        camfort
  default-language: Haskell2010
